--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -8,7 +8,7 @@
 
 
 {% block body %}
-<div class="d-flex col container-fluid align-items-center justify-content-center pb-5" id="dashboard-body">
+<div class="body d-flex col container-fluid align-items-center justify-content-center pb-5" id="dashboard-body">
     
     <div class="row col-lg-11 justify-content-center">
         <div class="d-flex mt-4">
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-11 d-flex justify-content-between mt-5 pt-4">
+        <div class="col-lg-11 d-flex justify-content-between mt-5 pt-4 mb-5">
             <img class="img-fluid" src="{% static 'images/porsche_digital.png' %}">
             <img class="img-fluid" src="{% static 'images/rimac.png' %}">
             <img class="img-fluid" src="{% static 'images/bugatti_rimac.png' %}">
