--- a/templates/commons/payment.html
+++ b/templates/commons/payment.html
@@ -6,7 +6,7 @@
 {% block title %}Django CRM - Payment{% endblock %}
 
 {% block body %}
-<div class="d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1;">
+<div class="body d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1;">
     <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
         <div class="col-lg-11 mt-4">
             <div style="width: 100%;">
