--- a/templates/commons/profile.html
+++ b/templates/commons/profile.html
@@ -6,7 +6,7 @@
 {% block title %}Django CRM - Login{% endblock %}
 
 {% block body %}
-<div class="d-flex container-fluid justify-content-center">
+<div class="body d-flex container-fluid justify-content-center">
     <div class="col d-flex justify-content-center row">
         <div class="col-lg-10">
             <img class="img-fluid" style="height: 120px; width: 100%;" src="{% static 'images/profile_test.jpeg' %}">
