--- a/templates/commons/support.html
+++ b/templates/commons/support.html
@@ -15,7 +15,7 @@
 
 {% block body %}
 
-    <div class="d-flex container-fluid align-items-center justify-content-center pt-3 pb-5" style="flex-grow: 1;">
+    <div class="body d-flex container-fluid align-items-center justify-content-center pt-3 pb-5" style="flex-grow: 1;">
         <div class="col d-flex justify-content-center align-items-center row">
             <div class="col-lg-9 mt-5">
                 <div>
