--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -12,6 +12,9 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
         <script src="https://kit.fontawesome.com/b1a21454b8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/fonts/fontawesome-free-5.3.1-web/css/all.css">
 
@@ -44,25 +47,22 @@
                 {% if request.user.is_authenticated %}
                 <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent">
                     <div>
-                        <a class="nav-link active text-style-rso-24" aria-current="page" href="{% url 'home' %}" style="color: white;">
+                        <a class="nav-link active text-style-ro-24b" aria-current="page" href="{% url 'home' %}" style="color: white;">
                             SHERLOOK 3000
                         </a>
                     </div>
                     <div class="d-flex align-items-center">
-                        <a class="nav-link active text-style-rso-22 px-3 py-1 me-2" aria-current="page" href="{% url 'home' %}" style="border: 1px solid white; border-radius: 20px; color: white;border: 1px solid white; border-radius: 20px; color: white;">
-                            DASHBOARD
+                        <a class="nav-link active ms-3 me-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                            <i class="fa-solid fa-magnifying-glass" style="font-size: 21px;"></i>
                         </a>
-                        <a class="nav-link active text-style-rso-22 px-3 py-1 ms-2 me-4" aria-current="page" href="" style="border: 1px solid white; border-radius: 20px; color: white;border: 1px solid white; border-radius: 20px; color: white;">
-                            SHERLOOK APP
+                        <a class="nav-link active ms-2 me-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                            <i class="fa-regular fa-bell" style="font-size: 21px;"></i>
                         </a>
-                        <a class="nav-link active ms-3 me-2" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
-                            <i class="fa-regular fa-bell"></i>
+                        <a class="nav-link active ms-2 me-3" aria-current="page" id="shopping-cart-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="YOUR CART" data-popover-content="#popover-cart" data-html="true" data-bs-custom-class="custom-cart-popover">
+                            <i class="fa-solid fa-cart-shopping" style="font-size: 21px;"></i>
                         </a>
-                        <a class="nav-link active ms-2 me-2" aria-current="page" href="{% url 'payment' %}">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-                        <a class="nav-link active ms-2 me-2" aria-current="page" href="{% url 'profile' %}">
-                            <i class="fa-regular fa-user"></i>
+                        <a class="nav-link active ms-2 me-1" aria-current="page" href="{% url 'profile' %}">
+                            <i class="fa-regular fa-user" style="font-size: 21px;"></i>
                         </a>
                     </div>
                     <!-- <div class="d-flex">
@@ -90,7 +90,7 @@
                 </div>
                 {% else %}
                 <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                    <div class="text-style-rso-24" style="color: white;">SHERLOOK 3000</div>
+                    <div class="text-style-ro-29b">SHERLOOK 3000</div>
                 </div>
                 {% endif %}
                 
@@ -98,9 +98,159 @@
         </nav>
         </header>
 
+        
+
+        <!-- Notification popover -->
+        <div class="hidden" id="popover-notification" style="display: none; width: 500px;">
+            <div class="popover-heading">
+              NOTIFICATIONS
+            </div>
+            
+            <div class="popover-body popover-notification-body">
+                <div class="text-style-ro-18b-popover" style="font-variant: small-caps;">Item that you bought has been updated.</div>
+                <hr>
+                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Item that you bought has been updated.</div>
+                <hr>
+                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Support has answered you inquiry. Check your e-mail.</div>
+                <hr>
+                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Purchase successful. Your receipt has been sent to your e-mail.</div>
+            </div>
+        </div>
+
+        <!-- Shopping cart popover -->
+        <div class="hidden" id="popover-cart" style="display: none;">
+            <div class="popover-heading">
+              YOUR CART
+            </div>
+            
+            <div class="popover-body">
+                <div>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>
+                        <div class="d-flex align-items-center">
+                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>
+                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>
+                        </div>
+                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>
+                    <div class="text-style-ro-16b mt-1">Germany</div>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>
+                        <div class="text-style-rso-18">300 💰 credits</div>
+                    </div>
+                    
+                    <hr>
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>
+                        <div class="d-flex align-items-center">
+                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>
+                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>
+                        </div>
+                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>
+                    <div class="text-style-ro-16b mt-1">Germany</div>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>
+                        <div class="text-style-rso-18">300 💰 credits</div>
+                    </div>
+
+                    <hr>
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-style-rso-22">TOTAL:</div>
+                        <div class="text-style-rso-18">600 💰 credits</div>
+                        <div><button class="orange-button">CHECKOUT</button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
         {% block body %}
+        
         {% endblock %}
-       
+
+        <footer>
+            <nav class="navbar navbar-expand-lg navbar-custom fixed-bottom" style="height: 70px !important;">
+                <div class="container-fluid px-5">
+                    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">
+                        <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                    WHO ARE WE?
+                                </a>
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                    CONTACT
+                                </a>
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">
+                                    FAQ
+                                </a>
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                    SHERLOOK APP
+                                </a>
+                                <div>
+                                    <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </footer>
+ 
+        <script>
+
+        document.addEventListener("DOMContentLoaded", function() {
+
+            var body = document.querySelector('.body');
+        
+            var notification_button = document.querySelector('#notification-button');
+            notification_button.addEventListener('click', function() {
+                if (body.classList.contains('blur')) {
+                    body.classList.remove('blur');
+                } else {
+                    body.classList.add('blur');
+                }
+                
+            })
+
+            var shopping_cart_button = document.querySelector('#shopping-cart-button');
+            shopping_cart_button.addEventListener('click', function() {
+                if (body.classList.contains('blur')) {
+                    body.classList.remove('blur');
+                } else {
+                    body.classList.add('blur');
+                }
+                
+            })
+
+
+            var elements = document.querySelectorAll("[data-bs-toggle=popover]");
+            elements.forEach(function(element) {
+                var popover = null;
+                element.addEventListener("click", function() {
+                if (popover) {
+                    popover.dispose();
+                    popover = null;
+                } else {
+                    var content = this.getAttribute("data-popover-content");
+                    var popoverContent = document.querySelector(content);
+                    var popoverBody = popoverContent.querySelector(".popover-body").innerHTML;
+                    var popoverHeading = popoverContent.querySelector(".popover-heading").innerHTML;
+
+                    var popoverOptions = {
+                    content: popoverBody,
+                    title: popoverHeading,
+                    html: true,
+                    sanitize: false,
+                    };
+                    popover = new bootstrap.Popover(this, popoverOptions);
+                    popover.show();
+                }
+                });
+            });
+            });
+
+
+
+        </script>
     </body>
 
 </html>
