--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -25,7 +25,7 @@
 {% block body %}
 
 
-<div class="col container-fluid justify-content-center px-5" id="search-body">
+<div class="body col container-fluid justify-content-center px-5" id="search-body">
     <div class="row d-flex justify-content-center mt-4 pb-4">
         <div class="col-lg-3">
             <div class="col ms-2">
