--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -42,10 +42,38 @@
     </head>
     <body>
         <header>
-        <nav class="navbar navbar-expand-lg navbar-custom">
+        <nav class="navbar navbar-dark navbar-expand-sm navbar-custom">
             <div class="container-fluid px-5">
+                <a class="navbar-brand text-style-ro-24b" href="{% url 'home' %}">SHERLOOK 3000</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 {% if request.user.is_authenticated %}
-                <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav d-flex" style="width: 100%;">
+                        <li class="nav-item ms-sm-auto">
+                            <a class="nav-link active ms-md-3 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                                <i class="fa-solid fa-magnifying-glass" style="font-size: 1.5vw; color: white;"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                                <i class="fa-regular fa-bell" style="font-size: 1.5vw; color: white;"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="shopping-cart-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="YOUR CART" data-popover-content="#popover-cart" data-html="true" data-bs-custom-class="custom-cart-popover">
+                                <i class="fa-solid fa-cart-shopping" style="font-size: 1.5vw; color: white;"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active ms-md-2 me-md-1" aria-current="page" href="{% url 'profile' %}">
+                                <i class="fa-regular fa-user" style="font-size: 1.5vw; color: white;"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">
                     <div>
                         <a class="nav-link active text-style-ro-24b" aria-current="page" href="{% url 'home' %}" style="color: white;">
                             SHERLOOK 3000
@@ -64,7 +92,10 @@
                         <a class="nav-link active ms-2 me-1" aria-current="page" href="{% url 'profile' %}">
                             <i class="fa-regular fa-user" style="font-size: 21px;"></i>
                         </a>
-                    </div>
+                    </div> -->
+
+
+                    
                     <!-- <div class="d-flex">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
                             Home
@@ -172,9 +203,12 @@
         <footer>
             <nav class="navbar navbar-expand-lg navbar-custom fixed-bottom" style="height: 70px !important;">
                 <div class="container-fluid px-5">
-                    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo02" style="color: white;">
                         <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
-                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'info' %}" style="color: white;">
                                     WHO ARE WE?
                                 </a>
                                 <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
