--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -1,56 +1,308 @@
-{% extends "commons/layout.html" %}
-
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}Django CRM - Login{% endblock %}
 
 
+<!DOCTYPE html>
+<html lang="en">
 
-{% block body %}
-<div class="d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1;">
-    <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
-        <div class="container-custom card col-lg-5 col-md-10 col-sm-12">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-sm-10">
-                    <div class="card-body pt-5 pb-3" style="width: 100%;">
-                        <h5 class="card-title text-style-rso-32 mb-2">Welcome back!</h5>
-                        <p class="text-style-ro-16 card-text mb-3">Don't have an account?<a href="{% url 'register' %}"
-                                style="color: #FF6B2C; padding-left: 10px; text-decoration:none;">Sign-up</a></p>
-                        {% if form.errors %}
-                            <p>Email or password not correct</p>
-                        {% endif %}
+<head>
 
-                        <form method="POST">
-                            {% csrf_token %}
-                            {% for field in form %}
-                                {% if field.field.widget.input_type != 'checkbox' %}    
-                                <label class="text-style-ro-14l mb-2">{{field.label}}</label>
-                                {{ field }}
-                                
-                                {% elif field.field.widget.input_type == 'checkbox' %}
-                                    {{ field }}<label class="text-style-ro-14" style="margin-left: 10px;">{{field.label}}</label>
-                                {% endif %}
-                            {% endfor %}
-                            
-                            <button type="submit" class="orange-button mb-3 mt-4"
-                                    style="height:48px;">
-                                <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
-                                Log-in
-                            </button>
-                        </form>
-                        <hr style="color: #5E6B78;">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Django CRM - Register</title>
+
+  <!-- Custom fonts for this template-->
+  <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <!-- Custom styles for this template-->
+  <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+    <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
+        <script src="https://kit.fontawesome.com/b1a21454b8.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/fonts/fontawesome-free-5.3.1-web/css/all.css">
+
+        <link href='https://fonts.googleapis.com/css?family=Racing Sans One' rel='stylesheet'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+
+                var checkbox_input = document.querySelector('#cb1');
+                document.querySelector('#signup-button').disabled = true;
+
+                checkbox_input.addEventListener('change', e => {
+                    if (e.target.checked === true) {
+                        document.querySelector('#signup-button').disabled = false;
+                    } else {
+                        document.querySelector('#signup-button').disabled = true;
+                    }
+                })
+
+            })
+        </script>
+        
+        
+        <style>
+
+            body {
+                display: flex;   
+                flex-direction: column; 
+                height: 100vh;
+            }
+
+            .first-container {
+                background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);
+            }
+
+            .navbar-custom {
+                background-color: #FF6B2C;
+                /* background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); */
+                height: 86px;
+                color: white;
+            }
+
+            .footer-custom {
+                background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);
+                height: 70px;
+                color: white;
+            }
+
+            .container-custom {
+                background-color: #FFF0EA;
+                border-radius: 20px;
+                border-color: #FFF0EA;
+                box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.2), -2px 5px 5px -1px rgba(0, 0, 0, 0.2);
+            }
+
+            ::placeholder {
+                font-size: 16px;
+                font-family: 'Roboto';
+                font-weight: 300;
+                color: #5E6B78;
+                padding-left: 18px;
+
+            }
+
+            .text-style-rso-68 {
+                font-size: 68px;
+                font-family: 'Racing Sans One';
+                line-height: 85px;
+                color: white;
+                text-align: center;
+            }
+
+            .text-style-rso-32 {
+                font-size: 32px;
+                font-family: 'Racing Sans One';
+                color: #100F0E;
+                line-height: 40px;
+            }
+
+            .text-style-ro-16 {
+                font-size: 16px;
+                font-family: 'Roboto';
+                color: #100F0E;
+                line-height: 20px;
+            }
+
+            .text-style-ro-14 {
+                font-size: 14px;
+                font-family: 'Roboto';
+                color: #100F0E;
+                line-height: 16px;
+            }
+
+            .text-style-ro-14l {
+                font-size: 14px;
+                font-family: 'Roboto';
+                color: #100F0E;
+                line-height: 16px;
+                font-weight: 300 ;
+            }
+
+            .text-style-ro-22b {
+                font-size: 22px;
+                font-family: 'Roboto';
+                color: #100F0E;
+                line-height: 30px;
+                font-weight: 900;
+            }
+
+            .text-style-ro-32b {
+                font-size: 32px;
+                font-family: 'Roboto';
+                color: #100F0E;
+                line-height: 40px;
+                font-weight: 900;
+            }
+
+            .text-style-ro-60 {
+                font-size: 60px;
+                font-family: 'Roboto';
+                color: white;
+                line-height: 70px;
+                font-weight: 100;
+                text-align: center;
+            }
+
+            .input-box {
+                border-radius: 6px;
+                width: 100%;
+                height: 48px;
+                border: none;
+                box-sizing: border-box;
+                vertical-align: middle;
+            }
+
+            .button-custom-style {
+                background-color: #FF6B2C;
+                border: none;
+                color: white;
+                height: 48px;
+                border-radius: 6px;
+                margin-bottom: 22px;
+            }
+
+            /* Checkbox styling */
+            #cb1 {
+                /* -moz-appearance:none;
+                -webkit-appearance:none;
+                -o-appearance:none; */
+                appearance:none;
+                outline: none;
+                content: none;	
+                vertical-align: middle;
+            }
+
+            #cb1::before {
+                font-size: 12px;
+                color: transparent !important;
+                display: block;
+                width: 15px;
+                height: 15px;
+                border-radius: 3px;
+                content: '';
+                outline: #FF6B2C;
+                border: 2px solid #FF6B2C;
+                text-align: center;
+            }
+
+            #cb1:checked:before {
+                font-family: "FontAwesome";
+                content: "\f00c";
+                font-size: 12px;
+                line-height: 15px !important;
+                color: #FF6B2C !important;
+            }
+
+        </style>
+
+</head>
+
+<body>
+    <div class="row m-0" style="width: 100%; height: 100%;">
+    <div class=" first-container container-fluid col-lg-6 d-flex justify-content-center" style=" overflow: auto;">
+        <div class="d-flex flex-column container-fluid align-items-center justify-content-center">
+            <p class="text-style-ro-60">"To find the solution to your problem, you only need to find us."</p>
+            <p style="margin-top: 50px; font-weight: 900 !important;" class="text-style-ro-60">SHERLOOK 3000</p>
+        </div>
+    </div>
+
+    <div class="col-lg-6 px-0" style="display: flex; flex-direction: column; height: calc(100% - 70px);">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-custom">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+                        <div class="navbar-nav ms-auto">    
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="d-flex container-fluid align-items-center justify-content-center mt-4 mb-4" style="flex-grow: 1;">
+            <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
+                <div class="container-custom card col-lg-10 col-md-10 col-sm-12">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-11 col-sm-10">
+                            <div class="card-body pt-4 pb-4" style="width: 100%;">
+                                <h5 class="card-title text-style-ro-32b mb-3">Welcome back</h5>
+                                <p class="text-style-ro-16 card-text mb-4">Don't have an account?<a href="{% url 'register' %}" style="color: #FF6B2C; padding-left: 10px; text-decoration: none;">Sign up</a></p>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    {% for field in form %}
+                                        <label class="text-style-ro-14l mb-2">{{field.label}}</label>
+                                        {{field }}
+                                    {% endfor %}
+                                    <input id="cb1" type="checkbox">
+                                    <label for="cb1" class="text-style-ro-14 ms-2">Remember me</label> 
+                                    <div class="d-flex justify-content-between">
+                                        <button id="signup-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 me-3">
+                                            <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
+                                                Log-in                                        </button>
+                                        <button id="signup-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 ms-3">
+                                            <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
+                                                Sign-up
+                                        </button>
+                                    </div>
+                                </form>
+                                <hr style="color: #5E6B78;">
+                            </div>               
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Bootstrap core JavaScript-->
-<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- Core plugin JavaScript-->
-<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
-<!-- Custom scripts for all pages-->
-<script src="{% static 'js/sb-admin-2.min.js' %}"></script>
-{% endblock %}
+    </div>
+
+    <footer>
+        <nav class="navbar fixed-bottom navbar-expand-lg footer-custom">
+            <div class="container-fluid px-5">
+                <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">
+                    <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                WHO ARE WE?
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                CONTACT
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">
+                                FAQ
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                SHERLOOK APP
+                            </a>
+                            <div>
+                                <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </footer>
+
+            
+
+  <!-- Bootstrap core JavaScript-->
+  <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+
+</body>
+
+</html>
