--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -246,10 +246,10 @@
                                     <input id="cb1" type="checkbox">
                                     <label for="cb1" class="text-style-ro-14 ms-2">Remember me</label> 
                                     <div class="d-flex justify-content-between">
-                                        <button id="signup-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 me-3">
+                                        <button id="login-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 me-3">
                                             <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
                                                 Log-in                                        </button>
-                                        <button id="signup-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 ms-3">
+                                        <button id="signup-button" type="" style="width: 100%;" class="button-custom-style mt-5 ms-3">
                                             <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
                                                 Sign-up
                                         </button>
