--- a/templates/commons/signup.html
+++ b/templates/commons/signup.html
@@ -19,7 +19,7 @@ min-height: calc(100% - 70px);">
                 <div class="col-lg-10 col-sm-10">
                     <div class="card-body pt-5 pb-3" style="width: 100%;">
                         <h5 class="card-title text-style-ro-32 mb-2">Create new account</h5>
-                        <p class="text-style-ro-16 card-text mb-3">Already have an account?<a href="{% url 'register' %}"
+                        <p class="text-style-ro-16 card-text mb-3">Already have an account?<a href="{% url 'login' %}"
                                 style="color: #FF6B2C; padding-left: 10px; text-decoration:none;">Log-in</a></p>
                         {% if form.errors %}
                             <p>Email or password not correct</p>
