--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -52,12 +52,12 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav d-flex" style="width: 100%;">
                         <li class="nav-item ms-sm-auto">
-                            <a class="nav-link active ms-md-3 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="search-button" href="{% url 'search' %}" title="SEARCH">
                                 <i class="fa-solid fa-magnifying-glass" style="font-size: 1.5vw; color: white;"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                            <a class="nav-link active ms-md-3 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
                                 <i class="fa-regular fa-bell" style="font-size: 1.5vw; color: white;"></i>
                             </a>
                         </li>
