--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -86,13 +86,13 @@
             </div>
             <div class="col-lg-2 ps-4">
                 <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
-                    <div><button class="btn text-style-rso-25">LIBRARY</button></div>
+                    <div><button class="btn text-style-rso-25" >LIBRARY</button></div>
                 </div>
                 <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
-                    <div><button class="btn text-style-rso-25">HELP</button></div>
+                    <div><button class="btn text-style-rso-25" onclick="location.href={% url 'support' %}">HELP</button></div>
                 </div>
                 <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
-                    <div><button class="btn text-style-rso-25">FAQ</button></div>
+                    <div><button class="btn text-style-rso-25" onclick="location.href={% url 'faq' %}">FAQ</button></div>
                 </div>
             </div>
         </div>
