--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -32,7 +32,7 @@
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
         
         <title>{% block title %}{% endblock %}</title>
-
+            
         {% block script %}
         {% endblock %}
 
@@ -42,7 +42,7 @@
     </head>
     <body>
         <header>
-        <nav class="navbar navbar-dark navbar-expand-sm navbar-custom">
+        <nav class="navbar navbar-dark navbar-expand-sm navbar-custom" style="height: 80px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);">
             <div class="container-fluid px-5">
                 <a class="navbar-brand text-style-ro-24b" href="{% url 'home' %}">SHERLOOK 3000</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -195,13 +195,28 @@
             </div>
         </div>
 
-        
-        {% block body %}
-        
-        {% endblock %}
-
+        <div class="" style="min-height: 100%;
+        display: flex;
+        flex-direction: column;">
+            <div class="row" style="flex: 1;
+            display: flex; width: 100%;">
+              <div id="side-navbar" style="width: 15%; position: fixed; top: 80px; left: 0; bottom: 0;  background-image: linear-gradient(to right, #ED1C24 , #F02825); box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);">
+                <div style="padding-top: 200px;">
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/search/' %}active{% endif %}" href="{% url 'search' %}" style="color: white;">SEARCH</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/library/' %}active{% endif %}" href="{% url 'library' %}" style="color: white;">LIBRARY</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/dashboard/' %}active{% endif %}" href="#" style="color: white;">DASHBOARD</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/info/' %}active{% endif %}" href="#" style="color: white;">INFO</a>
+                </div>
+              </div>
+              <div class="offset-2 pl-0" style="width: 84%; flex-grow: 1;">
+                {% block body %}
+          
+                {% endblock %}
+              </div>
+            
+            </div>
         <footer>
-            <nav class="navbar navbar-expand-lg navbar-custom fixed-bottom" style="height: 70px !important;">
+            <nav class="navbar navbar-expand-lg navbar-custom" style="height: 70px !important; position: sticky;">
                 <div class="container-fluid px-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -224,10 +239,12 @@
                                     <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">
                                 </div>
                         </div>
-                    </div>
+                    
                 </div>
             </nav>
         </footer>
+    </div>
+</div>
  
         <script>
 
@@ -280,8 +297,40 @@
                 }
                 });
             });
+
+            window.addEventListener('scroll', function() {
+                var coloredDiv = document.getElementById('side-navbar');
+                var topNavbarHeight = 80;
+                var scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                
+                if (scrollTop < topNavbarHeight) {
+                    coloredDiv.style.top = (topNavbarHeight - scrollTop) + 'px';
+                } else {
+                    coloredDiv.style.top = '0';
+                }
+
+
+                
             });
 
+            
+    
+
+     
+      
+      
+      
+
+
+            });
+
+
+ 
+
+
+
+
+  
 
 
         </script>
